# eximd

./: .gitignore  .release.toml  Cargo.toml  README.md  justfile
.github/workflows/: release-app.yaml  release-cli.yaml  release.yaml
cli/: .release.toml  Cargo.toml
cli/src/: config.rs  file_system.rs  main.rs
cli/src/commands/: analyze.rs  collect.rs  dups.rs  mod.rs  rename.rs
cli/tests/: rename.rs
core/: Cargo.toml
core/src/: config.rs  dir.rs  exif.rs  file.rs  lib.rs  utils.rs
src/: exif.rs  exif_local.rs  ext.rs  file_system.rs  gps.rs  hash_file.rs  lib.rs  main.rs  rename.rs  utils.rs
src/commands/: dups.rs  mod.rs  rename.rs
src/core/: exif.rs  mod.rs  utils.rs
tauri-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
tauri-app/src/: App.css  App.tsx  Intro.tsx  Rename.tsx  config.ts  main.css  main.tsx  utils.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
